sys/src/cmd/8a/y.output
   0  $accept : prog $end

   1  prog :
   2       | prog line

   3  $$1 :

   4  line : LLAB ':' $$1 line

   5  $$2 :

   6  line : LNAME ':' $$2 line
   7       | ';'
   8       | inst ';'
   9       | error ';'

  10  inst : LNAME '=' expr
  11       | LVAR '=' expr
  12       | LTYPE0 nonnon
  13       | LTYPE1 nonrem
  14       | LTYPE2 rimnon
  15       | LTYPE3 rimrem
  16       | LTYPE4 remrim
  17       | LTYPER nonrel
  18       | LTYPED spec1
  19       | LTYPET spec2
  20       | LTYPEC spec3
  21       | LTYPEN spec4
  22       | LTYPES spec5
  23       | LTYPEM spec6
  24       | LTYPEI spec7
  25       | LTYPEG spec8

  26  nonnon :
  27         | ','

  28  rimrem : rim ',' rem

  29  remrim : rem ',' rim

  30  rimnon : rim ','
  31         | rim

  32  nonrem : ',' rem
  33         | rem

  34  nonrel : ',' rel
  35         | rel

  36  spec1 : nam '/' con ',' imm

  37  spec2 : mem ',' imm
  38        | mem ',' con ',' imm

  39  spec3 : ',' rom
  40        | rom

  41  spec4 : nonnon
  42        | nonrem

  43  spec5 : rim ',' rem
  44        | rim ',' rem ':' LLREG

  45  spec6 : rim ',' rem
  46        | rim ',' rem ':' LSREG

  47  spec7 : rim ','
  48        | rim
  49        | rim ',' rem

  50  spec8 : mem ',' imm
  51        | mem ',' con ',' imm

  52  rem : reg
  53      | mem

  54  rom : rel
  55      | nmem
  56      | '*' reg
  57      | '*' omem
  58      | reg
  59      | omem
  60      | imm

  61  rim : rem
  62      | imm

  63  rel : con '(' LPC ')'
  64      | LNAME offset
  65      | LLAB offset

  66  reg : LBREG
  67      | LFREG
  68      | LLREG
  69      | LSP
  70      | LSREG

  71  imm : '$' con
  72      | '$' nam
  73      | '$' LSCONST
  74      | '$' LFCONST
  75      | '$' '(' LFCONST ')'
  76      | '$' '-' LFCONST

  77  imm2 : '$' con2

  78  con2 : LCONST
  79       | '-' LCONST
  80       | LCONST '-' LCONST
  81       | '-' LCONST '-' LCONST

  82  mem : omem
  83      | nmem

  84  omem : con
  85       | con '(' LLREG ')'
  86       | con '(' LSP ')'
  87       | con '(' LLREG '*' con ')'
  88       | con '(' LLREG ')' '(' LLREG '*' con ')'
  89       | '(' LLREG ')'
  90       | '(' LSP ')'
  91       | con '(' LSREG ')'
  92       | '(' LLREG '*' con ')'
  93       | '(' LLREG ')' '(' LLREG '*' con ')'

  94  nmem : nam
  95       | nam '(' LLREG '*' con ')'

  96  nam : LNAME offset '(' pointer ')'
  97      | LNAME '<' '>' offset '(' LSB ')'

  98  offset :
  99         | '+' con
 100         | '-' con

 101  pointer : LSB
 102          | LSP
 103          | LFP

 104  con : LCONST
 105      | LVAR
 106      | '-' con
 107      | '+' con
 108      | '~' con
 109      | '(' expr ')'

 110  expr : con
 111       | expr '+' expr
 112       | expr '-' expr
 113       | expr '*' expr
 114       | expr '/' expr
 115       | expr '%' expr
 116       | expr '<' '<' expr
 117       | expr '>' '>' expr
 118       | expr '&' expr
 119       | expr '^' expr
 120       | expr '|' expr

state 0
	$accept : . prog $end  (0)
	prog : .  (1)

	.  reduce 1

	prog  goto 1


state 1
	$accept : prog . $end  (0)
	prog : prog . line  (2)

	$end  accept
	error  shift 2
	LTYPE0  shift 3
	LTYPE1  shift 4
	LTYPE2  shift 5
	LTYPE3  shift 6
	LTYPE4  shift 7
	LTYPEC  shift 8
	LTYPED  shift 9
	LTYPEN  shift 10
	LTYPER  shift 11
	LTYPET  shift 12
	LTYPES  shift 13
	LTYPEM  shift 14
	LTYPEI  shift 15
	LTYPEG  shift 16
	LNAME  shift 17
	LLAB  shift 18
	LVAR  shift 19
	';'  shift 20
	.  error

	line  goto 21
	inst  goto 22


state 2
	line : error . ';'  (9)

	';'  shift 23
	.  error


state 3
	inst : LTYPE0 . nonnon  (12)
	nonnon : .  (26)

	','  shift 24
	';'  reduce 26

	nonnon  goto 25


state 4
	inst : LTYPE1 . nonrem  (13)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	','  shift 36
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 43
	omem  goto 44
	nmem  goto 45
	nonrem  goto 46


state 5
	inst : LTYPE2 . rimnon  (14)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	imm  goto 48
	reg  goto 41
	nam  goto 42
	rem  goto 49
	rim  goto 50
	omem  goto 44
	nmem  goto 45
	rimnon  goto 51


state 6
	inst : LTYPE3 . rimrem  (15)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	imm  goto 48
	reg  goto 41
	nam  goto 42
	rem  goto 49
	rim  goto 52
	omem  goto 44
	nmem  goto 45
	rimrem  goto 53


state 7
	inst : LTYPE4 . remrim  (16)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 54
	omem  goto 44
	nmem  goto 45
	remrim  goto 55


state 8
	inst : LTYPEC . spec3  (20)

	'+'  shift 26
	'-'  shift 27
	'*'  shift 56
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 57
	LLAB  shift 58
	LVAR  shift 35
	','  shift 59
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 60
	imm  goto 61
	reg  goto 62
	nam  goto 42
	rel  goto 63
	rom  goto 64
	omem  goto 65
	nmem  goto 66
	spec3  goto 67


state 9
	inst : LTYPED . spec1  (18)

	LNAME  shift 34
	.  error

	nam  goto 68
	spec1  goto 69


state 10
	inst : LTYPEN . spec4  (21)
	nonnon : .  (26)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	','  shift 70
	'('  shift 37
	'~'  shift 38
	';'  reduce 26

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 43
	omem  goto 44
	nmem  goto 45
	nonnon  goto 71
	nonrem  goto 72
	spec4  goto 73


state 11
	inst : LTYPER . nonrel  (17)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LNAME  shift 74
	LLAB  shift 58
	LVAR  shift 35
	','  shift 75
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 77
	rel  goto 78
	nonrel  goto 79


state 12
	inst : LTYPET . spec2  (19)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 80
	nam  goto 42
	omem  goto 44
	nmem  goto 45
	spec2  goto 81


state 13
	inst : LTYPES . spec5  (22)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	imm  goto 48
	reg  goto 41
	nam  goto 42
	rem  goto 49
	rim  goto 82
	omem  goto 44
	nmem  goto 45
	spec5  goto 83


state 14
	inst : LTYPEM . spec6  (23)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	imm  goto 48
	reg  goto 41
	nam  goto 42
	rem  goto 49
	rim  goto 84
	omem  goto 44
	nmem  goto 45
	spec6  goto 85


state 15
	inst : LTYPEI . spec7  (24)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	imm  goto 48
	reg  goto 41
	nam  goto 42
	rem  goto 49
	rim  goto 86
	omem  goto 44
	nmem  goto 45
	spec7  goto 87


state 16
	inst : LTYPEG . spec8  (25)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 88
	nam  goto 42
	omem  goto 44
	nmem  goto 45
	spec8  goto 89


state 17
	line : LNAME . ':' $$2 line  (6)
	inst : LNAME . '=' expr  (10)

	':'  shift 90
	'='  shift 91
	.  error


state 18
	line : LLAB . ':' $$1 line  (4)

	':'  shift 92
	.  error


state 19
	inst : LVAR . '=' expr  (11)

	'='  shift 93
	.  error


state 20
	line : ';' .  (7)

	.  reduce 7


state 21
	prog : prog line .  (2)

	.  reduce 2


state 22
	line : inst . ';'  (8)

	';'  shift 94
	.  error


state 23
	line : error ';' .  (9)

	.  reduce 9


state 24
	nonnon : ',' .  (27)

	.  reduce 27


state 25
	inst : LTYPE0 nonnon .  (12)

	.  reduce 12


state 26
	con : '+' . con  (107)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 95


state 27
	con : '-' . con  (106)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 96


state 28
	con : LCONST .  (104)

	.  reduce 104


state 29
	reg : LBREG .  (66)

	.  reduce 66


state 30
	reg : LLREG .  (68)

	.  reduce 68


state 31
	reg : LSREG .  (70)

	.  reduce 70


state 32
	reg : LFREG .  (67)

	.  reduce 67


state 33
	reg : LSP .  (69)

	.  reduce 69


state 34
	nam : LNAME . offset '(' pointer ')'  (96)
	nam : LNAME . '<' '>' offset '(' LSB ')'  (97)
	offset : .  (98)

	'<'  shift 97
	'+'  shift 98
	'-'  shift 99
	'('  reduce 98

	offset  goto 100


state 35
	con : LVAR .  (105)

	.  reduce 105


state 36
	nonrem : ',' . rem  (32)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 101
	omem  goto 44
	nmem  goto 45


state 37
	omem : '(' . LLREG ')'  (89)
	omem : '(' . LSP ')'  (90)
	omem : '(' . LLREG '*' con ')'  (92)
	omem : '(' . LLREG ')' '(' LLREG '*' con ')'  (93)
	con : '(' . expr ')'  (109)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LLREG  shift 102
	LSP  shift 103
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 104
	expr  goto 105


state 38
	con : '~' . con  (108)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 106


state 39
	omem : con .  (84)
	omem : con . '(' LLREG ')'  (85)
	omem : con . '(' LSP ')'  (86)
	omem : con . '(' LLREG '*' con ')'  (87)
	omem : con . '(' LLREG ')' '(' LLREG '*' con ')'  (88)
	omem : con . '(' LSREG ')'  (91)

	'('  shift 107
	':'  reduce 84
	';'  reduce 84
	','  reduce 84


state 40
	rem : mem .  (53)

	.  reduce 53


state 41
	rem : reg .  (52)

	.  reduce 52


state 42
	nmem : nam .  (94)
	nmem : nam . '(' LLREG '*' con ')'  (95)

	'('  shift 108
	':'  reduce 94
	';'  reduce 94
	','  reduce 94


state 43
	nonrem : rem .  (33)

	.  reduce 33


state 44
	mem : omem .  (82)

	.  reduce 82


state 45
	mem : nmem .  (83)

	.  reduce 83


state 46
	inst : LTYPE1 nonrem .  (13)

	.  reduce 13


state 47
	imm : '$' . con  (71)
	imm : '$' . nam  (72)
	imm : '$' . LSCONST  (73)
	imm : '$' . LFCONST  (74)
	imm : '$' . '(' LFCONST ')'  (75)
	imm : '$' . '-' LFCONST  (76)

	'+'  shift 26
	'-'  shift 109
	LCONST  shift 28
	LFCONST  shift 110
	LSCONST  shift 111
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 112
	'~'  shift 38
	.  error

	con  goto 113
	nam  goto 114


state 48
	rim : imm .  (62)

	.  reduce 62


state 49
	rim : rem .  (61)

	.  reduce 61


state 50
	rimnon : rim . ','  (30)
	rimnon : rim .  (31)

	','  shift 115
	';'  reduce 31


state 51
	inst : LTYPE2 rimnon .  (14)

	.  reduce 14


state 52
	rimrem : rim . ',' rem  (28)

	','  shift 116
	.  error


state 53
	inst : LTYPE3 rimrem .  (15)

	.  reduce 15


state 54
	remrim : rem . ',' rim  (29)

	','  shift 117
	.  error


state 55
	inst : LTYPE4 remrim .  (16)

	.  reduce 16


state 56
	rom : '*' . reg  (56)
	rom : '*' . omem  (57)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	reg  goto 118
	omem  goto 119


state 57
	rel : LNAME . offset  (64)
	nam : LNAME . offset '(' pointer ')'  (96)
	nam : LNAME . '<' '>' offset '(' LSB ')'  (97)
	offset : .  (98)

	'<'  shift 97
	'+'  shift 98
	'-'  shift 99
	';'  reduce 98
	'('  reduce 98

	offset  goto 120


state 58
	rel : LLAB . offset  (65)
	offset : .  (98)

	'+'  shift 98
	'-'  shift 99
	';'  reduce 98

	offset  goto 121


state 59
	spec3 : ',' . rom  (39)

	'+'  shift 26
	'-'  shift 27
	'*'  shift 56
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 57
	LLAB  shift 58
	LVAR  shift 35
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 60
	imm  goto 61
	reg  goto 62
	nam  goto 42
	rel  goto 63
	rom  goto 122
	omem  goto 65
	nmem  goto 66


state 60
	rel : con . '(' LPC ')'  (63)
	omem : con .  (84)
	omem : con . '(' LLREG ')'  (85)
	omem : con . '(' LSP ')'  (86)
	omem : con . '(' LLREG '*' con ')'  (87)
	omem : con . '(' LLREG ')' '(' LLREG '*' con ')'  (88)
	omem : con . '(' LSREG ')'  (91)

	'('  shift 123
	';'  reduce 84


state 61
	rom : imm .  (60)

	.  reduce 60


state 62
	rom : reg .  (58)

	.  reduce 58


state 63
	rom : rel .  (54)

	.  reduce 54


state 64
	spec3 : rom .  (40)

	.  reduce 40


state 65
	rom : omem .  (59)

	.  reduce 59


state 66
	rom : nmem .  (55)

	.  reduce 55


state 67
	inst : LTYPEC spec3 .  (20)

	.  reduce 20


state 68
	spec1 : nam . '/' con ',' imm  (36)

	'/'  shift 124
	.  error


state 69
	inst : LTYPED spec1 .  (18)

	.  reduce 18


state 70
	nonnon : ',' .  (27)
	nonrem : ',' . rem  (32)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	';'  reduce 27

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 101
	omem  goto 44
	nmem  goto 45


state 71
	spec4 : nonnon .  (41)

	.  reduce 41


state 72
	spec4 : nonrem .  (42)

	.  reduce 42


state 73
	inst : LTYPEN spec4 .  (21)

	.  reduce 21


state 74
	rel : LNAME . offset  (64)
	offset : .  (98)

	'+'  shift 98
	'-'  shift 99
	';'  reduce 98

	offset  goto 125


state 75
	nonrel : ',' . rel  (34)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LNAME  shift 74
	LLAB  shift 58
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 77
	rel  goto 126


state 76
	con : '(' . expr ')'  (109)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 104
	expr  goto 105


state 77
	rel : con . '(' LPC ')'  (63)

	'('  shift 127
	.  error


state 78
	nonrel : rel .  (35)

	.  reduce 35


state 79
	inst : LTYPER nonrel .  (17)

	.  reduce 17


state 80
	spec2 : mem . ',' imm  (37)
	spec2 : mem . ',' con ',' imm  (38)

	','  shift 128
	.  error


state 81
	inst : LTYPET spec2 .  (19)

	.  reduce 19


state 82
	spec5 : rim . ',' rem  (43)
	spec5 : rim . ',' rem ':' LLREG  (44)

	','  shift 129
	.  error


state 83
	inst : LTYPES spec5 .  (22)

	.  reduce 22


state 84
	spec6 : rim . ',' rem  (45)
	spec6 : rim . ',' rem ':' LSREG  (46)

	','  shift 130
	.  error


state 85
	inst : LTYPEM spec6 .  (23)

	.  reduce 23


state 86
	spec7 : rim . ','  (47)
	spec7 : rim .  (48)
	spec7 : rim . ',' rem  (49)

	','  shift 131
	';'  reduce 48


state 87
	inst : LTYPEI spec7 .  (24)

	.  reduce 24


state 88
	spec8 : mem . ',' imm  (50)
	spec8 : mem . ',' con ',' imm  (51)

	','  shift 132
	.  error


state 89
	inst : LTYPEG spec8 .  (25)

	.  reduce 25


state 90
	line : LNAME ':' . $$2 line  (6)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 133


state 91
	inst : LNAME '=' . expr  (10)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 104
	expr  goto 134


state 92
	line : LLAB ':' . $$1 line  (4)
	$$1 : .  (3)

	.  reduce 3

	$$1  goto 135


state 93
	inst : LVAR '=' . expr  (11)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 104
	expr  goto 136


state 94
	line : inst ';' .  (8)

	.  reduce 8


state 95
	con : '+' con .  (107)

	.  reduce 107


state 96
	con : '-' con .  (106)

	.  reduce 106


state 97
	nam : LNAME '<' . '>' offset '(' LSB ')'  (97)

	'>'  shift 137
	.  error


state 98
	offset : '+' . con  (99)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 138


state 99
	offset : '-' . con  (100)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 139


state 100
	nam : LNAME offset . '(' pointer ')'  (96)

	'('  shift 140
	.  error


state 101
	nonrem : ',' rem .  (32)

	.  reduce 32


state 102
	omem : '(' LLREG . ')'  (89)
	omem : '(' LLREG . '*' con ')'  (92)
	omem : '(' LLREG . ')' '(' LLREG '*' con ')'  (93)

	'*'  shift 141
	')'  shift 142
	.  error


state 103
	omem : '(' LSP . ')'  (90)

	')'  shift 143
	.  error


state 104
	expr : con .  (110)

	.  reduce 110


state 105
	con : '(' expr . ')'  (109)
	expr : expr . '+' expr  (111)
	expr : expr . '-' expr  (112)
	expr : expr . '*' expr  (113)
	expr : expr . '/' expr  (114)
	expr : expr . '%' expr  (115)
	expr : expr . '<' '<' expr  (116)
	expr : expr . '>' '>' expr  (117)
	expr : expr . '&' expr  (118)
	expr : expr . '^' expr  (119)
	expr : expr . '|' expr  (120)

	'|'  shift 144
	'^'  shift 145
	'&'  shift 146
	'<'  shift 147
	'>'  shift 148
	'+'  shift 149
	'-'  shift 150
	'*'  shift 151
	'/'  shift 152
	'%'  shift 153
	')'  shift 154
	.  error


state 106
	con : '~' con .  (108)

	.  reduce 108


state 107
	omem : con '(' . LLREG ')'  (85)
	omem : con '(' . LSP ')'  (86)
	omem : con '(' . LLREG '*' con ')'  (87)
	omem : con '(' . LLREG ')' '(' LLREG '*' con ')'  (88)
	omem : con '(' . LSREG ')'  (91)

	LLREG  shift 155
	LSREG  shift 156
	LSP  shift 157
	.  error


state 108
	nmem : nam '(' . LLREG '*' con ')'  (95)

	LLREG  shift 158
	.  error


state 109
	imm : '$' '-' . LFCONST  (76)
	con : '-' . con  (106)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LFCONST  shift 159
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 96


state 110
	imm : '$' LFCONST .  (74)

	.  reduce 74


state 111
	imm : '$' LSCONST .  (73)

	.  reduce 73


state 112
	imm : '$' '(' . LFCONST ')'  (75)
	con : '(' . expr ')'  (109)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LFCONST  shift 160
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 104
	expr  goto 105


state 113
	imm : '$' con .  (71)

	.  reduce 71


state 114
	imm : '$' nam .  (72)

	.  reduce 72


state 115
	rimnon : rim ',' .  (30)

	.  reduce 30


state 116
	rimrem : rim ',' . rem  (28)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 161
	omem  goto 44
	nmem  goto 45


state 117
	remrim : rem ',' . rim  (29)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	imm  goto 48
	reg  goto 41
	nam  goto 42
	rem  goto 49
	rim  goto 162
	omem  goto 44
	nmem  goto 45


state 118
	rom : '*' reg .  (56)

	.  reduce 56


state 119
	rom : '*' omem .  (57)

	.  reduce 57


state 120
	rel : LNAME offset .  (64)
	nam : LNAME offset . '(' pointer ')'  (96)

	'('  shift 140
	';'  reduce 64


state 121
	rel : LLAB offset .  (65)

	.  reduce 65


state 122
	spec3 : ',' rom .  (39)

	.  reduce 39


state 123
	rel : con '(' . LPC ')'  (63)
	omem : con '(' . LLREG ')'  (85)
	omem : con '(' . LSP ')'  (86)
	omem : con '(' . LLREG '*' con ')'  (87)
	omem : con '(' . LLREG ')' '(' LLREG '*' con ')'  (88)
	omem : con '(' . LSREG ')'  (91)

	LPC  shift 163
	LLREG  shift 155
	LSREG  shift 156
	LSP  shift 157
	.  error


state 124
	spec1 : nam '/' . con ',' imm  (36)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 164


state 125
	rel : LNAME offset .  (64)

	.  reduce 64


state 126
	nonrel : ',' rel .  (34)

	.  reduce 34


state 127
	rel : con '(' . LPC ')'  (63)

	LPC  shift 163
	.  error


state 128
	spec2 : mem ',' . imm  (37)
	spec2 : mem ',' . con ',' imm  (38)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 165
	imm  goto 166


state 129
	spec5 : rim ',' . rem  (43)
	spec5 : rim ',' . rem ':' LLREG  (44)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 167
	omem  goto 44
	nmem  goto 45


state 130
	spec6 : rim ',' . rem  (45)
	spec6 : rim ',' . rem ':' LSREG  (46)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	.  error

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 168
	omem  goto 44
	nmem  goto 45


state 131
	spec7 : rim ',' .  (47)
	spec7 : rim ',' . rem  (49)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LBREG  shift 29
	LLREG  shift 30
	LSREG  shift 31
	LFREG  shift 32
	LSP  shift 33
	LNAME  shift 34
	LVAR  shift 35
	'('  shift 37
	'~'  shift 38
	';'  reduce 47

	con  goto 39
	mem  goto 40
	reg  goto 41
	nam  goto 42
	rem  goto 169
	omem  goto 44
	nmem  goto 45


state 132
	spec8 : mem ',' . imm  (50)
	spec8 : mem ',' . con ',' imm  (51)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'$'  shift 47
	'~'  shift 38
	.  error

	con  goto 170
	imm  goto 171


state 133
	line : LNAME ':' $$2 . line  (6)

	error  shift 2
	LTYPE0  shift 3
	LTYPE1  shift 4
	LTYPE2  shift 5
	LTYPE3  shift 6
	LTYPE4  shift 7
	LTYPEC  shift 8
	LTYPED  shift 9
	LTYPEN  shift 10
	LTYPER  shift 11
	LTYPET  shift 12
	LTYPES  shift 13
	LTYPEM  shift 14
	LTYPEI  shift 15
	LTYPEG  shift 16
	LNAME  shift 17
	LLAB  shift 18
	LVAR  shift 19
	';'  shift 20
	.  error

	line  goto 172
	inst  goto 22


state 134
	inst : LNAME '=' expr .  (10)
	expr : expr . '+' expr  (111)
	expr : expr . '-' expr  (112)
	expr : expr . '*' expr  (113)
	expr : expr . '/' expr  (114)
	expr : expr . '%' expr  (115)
	expr : expr . '<' '<' expr  (116)
	expr : expr . '>' '>' expr  (117)
	expr : expr . '&' expr  (118)
	expr : expr . '^' expr  (119)
	expr : expr . '|' expr  (120)

	'|'  shift 144
	'^'  shift 145
	'&'  shift 146
	'<'  shift 147
	'>'  shift 148
	'+'  shift 149
	'-'  shift 150
	'*'  shift 151
	'/'  shift 152
	'%'  shift 153
	';'  reduce 10


state 135
	line : LLAB ':' $$1 . line  (4)

	error  shift 2
	LTYPE0  shift 3
	LTYPE1  shift 4
	LTYPE2  shift 5
	LTYPE3  shift 6
	LTYPE4  shift 7
	LTYPEC  shift 8
	LTYPED  shift 9
	LTYPEN  shift 10
	LTYPER  shift 11
	LTYPET  shift 12
	LTYPES  shift 13
	LTYPEM  shift 14
	LTYPEI  shift 15
	LTYPEG  shift 16
	LNAME  shift 17
	LLAB  shift 18
	LVAR  shift 19
	';'  shift 20
	.  error

	line  goto 173
	inst  goto 22


state 136
	inst : LVAR '=' expr .  (11)
	expr : expr . '+' expr  (111)
	expr : expr . '-' expr  (112)
	expr : expr . '*' expr  (113)
	expr : expr . '/' expr  (114)
	expr : expr . '%' expr  (115)
	expr : expr . '<' '<' expr  (116)
	expr : expr . '>' '>' expr  (117)
	expr : expr . '&' expr  (118)
	expr : expr . '^' expr  (119)
	expr : expr . '|' expr  (120)

	'|'  shift 144
	'^'  shift 145
	'&'  shift 146
	'<'  shift 147
	'>'  shift 148
	'+'  shift 149
	'-'  shift 150
	'*'  shift 151
	'/'  shift 152
	'%'  shift 153
	';'  reduce 11


state 137
	nam : LNAME '<' '>' . offset '(' LSB ')'  (97)
	offset : .  (98)

	'+'  shift 98
	'-'  shift 99
	'('  reduce 98

	offset  goto 174


state 138
	offset : '+' con .  (99)

	.  reduce 99


state 139
	offset : '-' con .  (100)

	.  reduce 100


state 140
	nam : LNAME offset '(' . pointer ')'  (96)

	LFP  shift 175
	LSB  shift 176
	LSP  shift 177
	.  error

	pointer  goto 178


state 141
	omem : '(' LLREG '*' . con ')'  (92)

	'+'  shift 26
	'-'  shift 27
	LCONST  shift 28
	LVAR  shift 35
	'('  shift 76
	'~'  shift 38
	.  error

	con  goto 179


state 142
	omem : '(' LLREG ')' .  (89)
	omem : '(' LLREG ')' . '(' LLREG '*' con ')'  (93)

	'('  shift 180
	':'  reduce 89
	';'  reduce 89
	','  reduce 89


state 143
	omem : '(' LSP ')' .  (90)

	.  reduce 90


state 144
	expr : expr '|' . expr  (120)
